fix z-index bug

--- a/common/common.scss
+++ b/common/common.scss
@@ -394,13 +394,17 @@ body.has-full-page-chat .alert-info {
 
 
 /* chat */
-.has-full-page-chat:not(.discourse-sidebar) #main-outlet {
+.desktop-view.has-full-page-chat:not(.discourse-sidebar) #main-outlet {
     margin-left: 10px;
     margin-top: 10px;
 }
-.has-full-page-chat:not(.discourse-sidebar) .full-page-chat {
+.desktop-view.has-full-page-chat:not(.discourse-sidebar) .full-page-chat {
     border: 1px solid var(--primary-low);
     border-radius: var(--ant-radius);
+}
+.chat-channel-unread-indicator {
+    scale: 0.7;
+    transform: translate(-5px, -5px);
 }
 .full-page-chat .chat-full-page-header {
     border-top: none;
